fixed spacing issues between service groups on mobile

--- a/css/services.css
+++ b/css/services.css
@@ -97,7 +97,7 @@ html, body {
 }
 
 .service-card {
-    height: 400px;
+    height: auto;
     margin-bottom: 90px;
     margin-top: 50px;
     position: relative;
@@ -122,7 +122,7 @@ html, body {
     width: 70px;
     height: auto;
     float: left;
-    margin: 0 25px 100% 0;
+    margin: 0 25px 400px 0;
 }
 
 .clippy-sales {
